Release 1.3b3 (in development)
==============================

Incompatible changes
--------------------

* Dependency requirement updates: docutils 0.11, Pygments 2.0

Features added
--------------

* Added ``highlight_options`` configuration value.
* The ``language`` config value is now available in the HTML templates.
* The ``env-updated`` event can now return a value, which is interpreted
  as an iterable of additional docnames that need to be rewritten.
* #772: Support for scoped and unscoped enums in C++. Enumerators in unscoped
  enums are injected into the parent scope in addition to the enum scope.
* Add ``todo_include_todos`` config option to quickstart conf file, handled as
  described in documentation.
* HTML breadcrumb items tag has class "nav-item" and "nav-item-N" (like
  nav-item-0, 1, 2...).
* New option `sphinx-quickstart --use-make-mode` for generating Makefile that
  use sphinx-build make-mode.

Bugs fixed
----------

* LaTeX writer now generates correct markup for cells spanning multiple rows.
* #1674: Do not crash if a module's ``__all__`` is not a list of strings.
* #1629: Use VerbatimBorderColor to add frame to code-block in LaTeX
* On windows, make-mode didn't work on Win32 platform if sphinx was invoked as
  ``python sphinx-build.py``.
* #1687: linkcheck now treats 401 Unauthorized responses as "working".
* #1690: toctrees with ``glob`` option now can also contain entries for single
  documents with explicit title.
* #1591: html search results for C++ elements now has correct interpage links.
* bizstyle theme: nested long title pages make long breadcrumb that breaks page layout.
* bizstyle theme: all breadcrumb items become 'Top' on some mobile browser
  (iPhone5s safari).
* #1722: restore ``toctree()`` template function behavior that was changed at 1.3b1.
* #1732: i18n: localized table caption raises exception.
* #1718: ``:numref:`` does not work with capital letters in the label


Release 1.3b2 (released Dec 5, 2014)