@@ -6,4 +6,4 @@ keep_warnings = True
 templates_path = ['_templates']
 html_additional_pages = {'index': 'index.html'}
 release = version = '2013.120'
-gettext_enables = ['index']
+gettext_additional_targets = ['index']
